# basic-stock-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
stock_cli/: cli.py  stocks_table.py
